force-app/main/default/objects/AR_Accounts_Receivable__c/AR_Accounts_Receivable__c.object-meta.xml
<CustomObject>
    <label>Accounts Receivable</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Receivables</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>