force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Age_by_First_Billed__c.field-meta.xml
<CustomField>
    <fullName>AR_Age_by_First_Billed__c</fullName>
    <label>Age by First Billed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>