force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Age_by_Last_Billed__c.field-meta.xml
<CustomField>
    <fullName>AR_Age_by_Last_Billed__c</fullName>
    <label>Aging Bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>