force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Balance__c.field-meta.xml
<CustomField>
    <fullName>AR_Balance__c</fullName>
    <label>Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>