force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Business_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>AR_Business_Entity_Id__c</fullName>
    <label>Business Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>