force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Dashboard_Expec__c.field-meta.xml
<CustomField>
    <fullName>AR_Dashboard_Expec__c</fullName>
    <formula>VALUE(AR_Expected_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>