force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Diagnosis1_Code__c.field-meta.xml
<CustomField>
    <fullName>AR_Diagnosis1_Code__c</fullName>
    <label>Diagnosis1 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>