force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_External_Id__c.field-meta.xml
<CustomField>
    <fullName>AR_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>AR External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>