force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>AR_Follow_Up_Date__c</fullName>
    <label>Follow Up Date TEXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>