force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Geozip__c.field-meta.xml
<CustomField>
    <fullName>AR_Geozip__c</fullName>
    <label>Geozip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>