force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Insurance_Payments__c.field-meta.xml
<CustomField>
    <fullName>AR_Insurance_Payments__c</fullName>
    <label>Insurance Payments</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>