force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Insurance_Profile__c.field-meta.xml
<CustomField>
    <fullName>AR_Insurance_Profile__c</fullName>
    <label>Insurance Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>