force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Last_Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>AR_Last_Claim_Id__c</fullName>
    <label>Last Claim Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>