force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>AR_Location_Name__c</fullName>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>