force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Medicare_Geozip__c.field-meta.xml
<CustomField>
    <fullName>AR_Medicare_Geozip__c</fullName>
    <formula>LEFT(AR_Geozip__c, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicare Geozip</label>
    <type>Text</type>
</CustomField>