force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Payment__c.field-meta.xml
<CustomField>
    <fullName>AR_Payment__c</fullName>
    <label>Payment TEXT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>