force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Payment_Variance__c.field-meta.xml
<CustomField>
    <fullName>AR_Payment_Variance__c</fullName>
    <formula>AR_Amount__c - VALUE(AR_Expected_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>