force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>AR_Policy_Type__c</fullName>
    <label>Policy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>