force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Re_Routing__c.field-meta.xml
<CustomField>
    <fullName>AR_Re_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AR Re-Routing</label>
    <type>Checkbox</type>
</CustomField>