force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Responsibility_Type__c.field-meta.xml
<CustomField>
    <fullName>AR_Responsibility_Type__c</fullName>
    <label>Responsibility Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>