force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Units__c.field-meta.xml
<CustomField>
    <fullName>AR_Units__c</fullName>
    <label>Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>