force-app/main/default/objects/AR_Accounts_Receivable__c/fields/AR_Value_Balance__c.field-meta.xml
<CustomField>
    <fullName>AR_Value_Balance__c</fullName>
    <label>Value Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>