force-app/main/default/objects/AR_Accounts_Receivable__c/fields/Follow_Up_Display_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Display_Date__c</fullName>
    <label>Follow Up Display Date</label>
    <type>Date</type>
</CustomField>