force-app/main/default/objects/AR_Accounts_Receivable__c/fields/Injection_Status__c.field-meta.xml
<CustomField>
    <fullName>Injection_Status__c</fullName>
    <label>Injection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ST</fullName>
            </value>
            <value>
                <fullName>2ND</fullName>
            </value>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>A-PRJ</fullName>
            </value>
            <value>
                <fullName>ARB</fullName>
            </value>
            <value>
                <fullName>ARB-DND</fullName>
            </value>
            <value>
                <fullName>ARB-R</fullName>
            </value>
            <value>
                <fullName>ARB-SENT</fullName>
            </value>
            <value>
                <fullName>AR-WIN</fullName>
            </value>
            <value>
                <fullName>BTA</fullName>
            </value>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>DME</fullName>
            </value>
            <value>
                <fullName>DOBI</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>ERR</fullName>
            </value>
            <value>
                <fullName>FES</fullName>
            </value>
            <value>
                <fullName>FTP</fullName>
            </value>
            <value>
                <fullName>H-ZEL</fullName>
            </value>
            <value>
                <fullName>IDR-APP</fullName>
            </value>
            <value>
                <fullName>IDR FEE PAID</fullName>
            </value>
            <value>
                <fullName>IDR-NEG</fullName>
            </value>
            <value>
                <fullName>IDR-PAID</fullName>
            </value>
            <value>
                <fullName>IDR-WIN</fullName>
            </value>
            <value>
                <fullName>INP</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>I-REF</fullName>
            </value>
            <value>
                <fullName>LOP</fullName>
            </value>
            <value>
                <fullName>LOP-N</fullName>
            </value>
            <value>
                <fullName>LVM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>