force-app/main/default/objects/AR_Accounts_Receivable__c/fields/Mulesoft_Time__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Time__c</fullName>
    <label>Mulesoft Time</label>
    <type>DateTime</type>
</CustomField>