force-app/main/default/objects/AR_Accounts_Receivable__c/fields/Workbook_Category__c.field-meta.xml
<CustomField>
    <fullName>Workbook_Category__c</fullName>
    <label>Workbook Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Injection Workbook</fullName>
            </value>
            <value>
                <fullName>Surgical Excluding PIP WC</fullName>
            </value>
            <value>
                <fullName>Surgical Including PIP WC</fullName>
            </value>
            <value>
                <fullName>Surgical Self Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>