force-app/main/default/objects/AR_Accounts_Receivable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AR_Team_Name__c</columns>
    <columns>AR_Location_Name__c</columns>
    <columns>AR_Patient_Account__c</columns>
    <columns>AR_Last_Claim_Id__c</columns>
    <columns>AR_DOS__c</columns>
    <columns>AR_Priority_Status__c</columns>
    <columns>AR_Charge_Status__c</columns>
    <columns>AR_Insurance_Profile__c</columns>
    <columns>AR_Amount__c</columns>
    <columns>AR_Value_Balance__c</columns>
    <columns>Injection_Status__c</columns>
    <columns>AR_Date_Worked__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>AR_Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>