force-app/main/default/objects/AR_Accounts_Receivable__c/listViews/Assigned_to_Me.listView-meta.xml
<ListView>
    <fullName>Assigned_to_Me</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Assigned to Me</label>
</ListView>