force-app/main/default/objects/AR_Accounts_Receivable__c/listViews/Completed_Request.listView-meta.xml
<ListView>
    <fullName>Completed_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Completed Request</label>
</ListView>