force-app/main/default/objects/AR_Accounts_Receivable__c/listViews/Pending_Inventory.listView-meta.xml
<ListView>
    <fullName>Pending_Inventory</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Pending Inventory</label>
</ListView>